overflow fix to avoid scroll bars on show profile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -900,3 +900,7 @@ p.url-info a {
 	text-decoration: none;
 }
 
+section.focus {
+	overflow: hidden;
+}
+
